dev/non_executable_reasons_record/1122.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
from __future__ import print_function
import pandas as pd
import numpy as np
from scipy import  stats
import matplotlib.pyplot as plt
import statsmodels.api as sm
from statsmodels.graphics.api import qqplot
------------------

[0;36m  File [0;32m"<ipython-input-1-c721773c5844>"[0;36m, line [0;32m6[0m
[0;31m    from scipy import  stats[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-c721773c5844>, line 6)

Executability                            : False
